# Yadro_RISC-V_winter_2025

./: .gitignore  README.md  meson.build
src/: meson.build
src/kernels/: meson.build  vec_sum.cl
src/vec_sum/: main.c  meson.build
